profiling-using-exp-runner/backup_FINAL_RESULTS/dijkstra_experiment/run_4_repetition_0/energibridge.log
sampling interval: 200, target function: dijkstra_cache, input size: frozenset({('R', frozenset({('A', 8), ('Q', 3), ('N', 2), ('B', 1), ('S', 1), ('K', 3), ('H', 3), ('F', 5), ('D', 6), ('J', 5), ('P', 4), ('O', 7), ('T', 9), ('I', 7), ('M', 5), ('E', 3), ('L', 2), ('C', 3), ('G', 3)})), ('M', frozenset({('J', 4), ('A', 2), ('K', 7), ('Q', 9), ('E', 8), ('L', 7), ('P', 8), ('I', 5), ('B', 7), ('S', 4), ('H', 6), ('D', 6), ('C', 7), ('G', 4), ('R', 5), ('F', 7), ('N', 6), ('T', 2), ('O', 3)})), ('J', frozenset({('O', 9), ('K', 1), ('Q', 3), ('H', 7), ('M', 4), ('D', 7), ('C', 5), ('N', 5), ('G', 8), ('I', 2), ('S', 4), ('T', 6), ('B', 9), ('R', 5), ('A', 3), ('F', 4), ('E', 6), ('L', 2), ('P', 6)})), ('A', frozenset({('G', 6), ('S', 2), ('C', 3), ('E', 5), ('D', 4), ('L', 4), ('J', 3), ('P', 7), ('T', 9), ('R', 8), ('I', 7), ('Q', 4), ('H', 2), ('K', 5), ('F', 1), ('M', 2), ('N', 6), ('B', 2), ('O', 3)})), ('N', frozenset({('G', 6), ('P', 9), ('T', 5), ('H', 7), ('C', 8), ('I', 2), ('S', 7), ('F', 8), ('M', 6), ('D', 9), ('J', 5), ('O', 4), ('R', 2), ('B', 6), ('A', 6), ('Q', 1), ('K', 8), ('E', 3), ('L', 8)})), ('L', frozenset({('O', 9), ('I', 9), ('S', 8), ('M', 7), ('F', 6), ('N', 8), ('A', 4), ('Q', 5), ('K', 6), ('E', 4), ('P', 1), ('G', 1), ('C', 4), ('J', 2), ('T', 3), ('B', 3), ('R', 2), ('H', 2), ('D', 5)})), ('Q', frozenset({('B', 5), ('O', 6), ('T', 5), ('K', 4), ('H', 4), ('F', 9), ('E', 5), ('C', 2), ('G', 5), ('J', 3), ('R', 3), ('A', 4), ('M', 9), ('N', 1), ('I', 1), ('S', 9), ('L', 5), ('D', 8), ('P', 6)})), ('P', frozenset({('B', 8), ('R', 4), ('F', 3), ('Q', 6), ('L', 1), ('D', 4), ('G', 2), ('O', 2), ('J', 6), ('I', 8), ('A', 7), ('C', 1), ('T', 9), ('K', 2), ('S', 3), ('H', 5), ('M', 8), ('E', 9), ('N', 9)})), ('T', frozenset({('O', 9), ('P', 9), ('S', 5), ('K', 7), ('H', 1), ('E', 2), ('D', 1), ('N', 5), ('I', 5), ('G', 8), ('J', 6), ('R', 9), ('Q', 5), ('L', 3), ('C', 7), ('B', 6), ('A', 9), ('M', 2), ('F', 4)})), ('K', frozenset({('O', 9), ('C', 6), ('A', 5), ('S', 5), ('M', 7), ('N', 8), ('P', 2), ('T', 7), ('R', 3), ('E', 1), ('F', 5), ('D', 3), ('L', 6), ('Q', 4), ('H', 8), ('J', 1), ('G', 9), ('B', 2), ('I', 3)})), ('C', frozenset({('O', 9), ('I', 9), ('H', 4), ('M', 7), ('E', 8), ('L', 4), ('N', 8), ('T', 7), ('R', 3), ('Q', 2), ('S', 4), ('K', 6), ('P', 1), ('J', 5), ('B', 6), ('A', 3), ('F', 7), ('D', 2), ('G', 3)})), ('E', frozenset({('P', 9), ('A', 5), ('K', 1), ('L', 4), ('C', 8), ('I', 5), ('J', 6), ('R', 3), ('Q', 5), ('D', 6), ('G', 7), ('O', 7), ('B', 3), ('H', 2), ('S', 6), ('F', 4), ('M', 8), ('N', 3), ('T', 2)})), ('S', frozenset({('J', 4), ('R', 1), ('I', 6), ('T', 5), ('A', 2), ('Q', 9), ('M', 4), ('D', 7), ('O', 8), ('C', 4), ('N', 7), ('H', 2), ('K', 5), ('F', 1), ('E', 6), ('P', 3), ('L', 8), ('G', 9), ('B', 2)})), ('G', frozenset({('T', 8), ('C', 3), ('M', 4), ('D', 1), ('L', 1), ('P', 2), ('B', 4), ('R', 3), ('F', 2), ('Q', 5), ('K', 9), ('E', 7), ('O', 7), ('J', 8), ('A', 6), ('H', 5), ('S', 9), ('N', 6), ('I', 3)})), ('O', frozenset({('C', 9), ('R', 7), ('S', 8), ('Q', 6), ('F', 6), ('P', 2), ('J', 9), ('B', 4), ('K', 9), ('H', 9), ('M', 3), ('E', 7), ('L', 9), ('N', 4), ('G', 7), ('I', 4), ('T', 9), ('A', 3), ('D', 2)})), ('F', frozenset({('J', 4), ('I', 6), ('O', 6), ('B', 8), ('Q', 9), ('M', 7), ('G', 2), ('N', 8), ('T', 4), ('A', 1), ('S', 1), ('H', 3), ('E', 4), ('C', 7), ('R', 5), ('K', 2), ('D', 5), ('L', 5), ('P', 3)})), ('B', frozenset({('R', 1), ('A', 2), ('S', 2), ('M', 7), ('D', 7), ('P', 8), ('J', 9), ('Q', 5), ('F', 8), ('L', 3), ('O', 4), ('I', 1), ('G', 4), ('T', 6), ('K', 2), ('H', 5), ('E', 3), ('N', 6), ('C', 6)})), ('I', frozenset({('T', 5), ('C', 9), ('R', 7), ('H', 1), ('F', 6), ('E', 5), ('N', 2), ('P', 8), ('B', 1), ('A', 7), ('K', 3), ('L', 9), ('O', 4), ('J', 2), ('Q', 1), ('S', 6), ('M', 5), ('D', 2), ('G', 3)})), ('D', frozenset({('C', 2), ('T', 1), ('O', 2), ('B', 7), ('I', 2), ('R', 6), ('S', 7), ('A', 4), ('K', 3), ('F', 5), ('Q', 8), ('M', 6), ('G', 1), ('P', 4), ('H', 8), ('E', 6), ('L', 5), ('J', 7), ('N', 9)})), ('H', frozenset({('O', 9), ('B', 5), ('A', 2), ('S', 2), ('F', 3), ('E', 2), ('P', 5), ('T', 1), ('G', 5), ('R', 3), ('M', 6), ('C', 4), ('I', 1), ('N', 7), ('Q', 4), ('K', 8), ('L', 2), ('D', 8), ('J', 7)}))})
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import memory.dijkstra as module; graph = frozenset({(R, frozenset({(A, 8), (Q, 3), (N, 2), (B, 1), (S, 1), (K, 3), (H, 3), (F, 5), (D, 6), (J, 5), (P, 4), (O, 7), (T, 9), (I, 7), (M, 5), (E, 3), (L, 2), (C, 3), (G, 3)})), (M, frozenset({(J, 4), (A, 2), (K, 7), (Q, 9), (E, 8), (L, 7), (P, 8), (I, 5), (B, 7), (S, 4), (H, 6), (D, 6), (C, 7), (G, 4), (R, 5), (F, 7), (N, 6), (T, 2), (O, 3)})), (J, frozenset({(O, 9), (K, 1), (Q, 3), (H, 7), (M, 4), (D, 7), (C, 5), (N, 5), (G, 8), (I, 2), (S, 4), (T, 6), (B, 9), (R, 5), (A, 3), (F, 4), (E, 6), (L, 2), (P, 6)})), (A, frozenset({(G, 6), (S, 2), (C, 3), (E, 5), (D, 4), (L, 4), (J, 3), (P, 7), (T, 9), (R, 8), (I, 7), (Q, 4), (H, 2), (K, 5), (F, 1), (M, 2), (N, 6), (B, 2), (O, 3)})), (N, frozenset({(G, 6), (P, 9), (T, 5), (H, 7), (C, 8), (I, 2), (S, 7), (F, 8), (M, 6), (D, 9), (J, 5), (O, 4), (R, 2), (B, 6), (A, 6), (Q, 1), (K, 8), (E, 3), (L, 8)})), (L, frozenset({(O, 9), (I, 9), (S, 8), (M, 7), (F, 6), (N, 8), (A, 4), (Q, 5), (K, 6), (E, 4), (P, 1), (G, 1), (C, 4), (J, 2), (T, 3), (B, 3), (R, 2), (H, 2), (D, 5)})), (Q, frozenset({(B, 5), (O, 6), (T, 5), (K, 4), (H, 4), (F, 9), (E, 5), (C, 2), (G, 5), (J, 3), (R, 3), (A, 4), (M, 9), (N, 1), (I, 1), (S, 9), (L, 5), (D, 8), (P, 6)})), (P, frozenset({(B, 8), (R, 4), (F, 3), (Q, 6), (L, 1), (D, 4), (G, 2), (O, 2), (J, 6), (I, 8), (A, 7), (C, 1), (T, 9), (K, 2), (S, 3), (H, 5), (M, 8), (E, 9), (N, 9)})), (T, frozenset({(O, 9), (P, 9), (S, 5), (K, 7), (H, 1), (E, 2), (D, 1), (N, 5), (I, 5), (G, 8), (J, 6), (R, 9), (Q, 5), (L, 3), (C, 7), (B, 6), (A, 9), (M, 2), (F, 4)})), (K, frozenset({(O, 9), (C, 6), (A, 5), (S, 5), (M, 7), (N, 8), (P, 2), (T, 7), (R, 3), (E, 1), (F, 5), (D, 3), (L, 6), (Q, 4), (H, 8), (J, 1), (G, 9), (B, 2), (I, 3)})), (C, frozenset({(O, 9), (I, 9), (H, 4), (M, 7), (E, 8), (L, 4), (N, 8), (T, 7), (R, 3), (Q, 2), (S, 4), (K, 6), (P, 1), (J, 5), (B, 6), (A, 3), (F, 7), (D, 2), (G, 3)})), (E, frozenset({(P, 9), (A, 5), (K, 1), (L, 4), (C, 8), (I, 5), (J, 6), (R, 3), (Q, 5), (D, 6), (G, 7), (O, 7), (B, 3), (H, 2), (S, 6), (F, 4), (M, 8), (N, 3), (T, 2)})), (S, frozenset({(J, 4), (R, 1), (I, 6), (T, 5), (A, 2), (Q, 9), (M, 4), (D, 7), (O, 8), (C, 4), (N, 7), (H, 2), (K, 5), (F, 1), (E, 6), (P, 3), (L, 8), (G, 9), (B, 2)})), (G, frozenset({(T, 8), (C, 3), (M, 4), (D, 1), (L, 1), (P, 2), (B, 4), (R, 3), (F, 2), (Q, 5), (K, 9), (E, 7), (O, 7), (J, 8), (A, 6), (H, 5), (S, 9), (N, 6), (I, 3)})), (O, frozenset({(C, 9), (R, 7), (S, 8), (Q, 6), (F, 6), (P, 2), (J, 9), (B, 4), (K, 9), (H, 9), (M, 3), (E, 7), (L, 9), (N, 4), (G, 7), (I, 4), (T, 9), (A, 3), (D, 2)})), (F, frozenset({(J, 4), (I, 6), (O, 6), (B, 8), (Q, 9), (M, 7), (G, 2), (N, 8), (T, 4), (A, 1), (S, 1), (H, 3), (E, 4), (C, 7), (R, 5), (K, 2), (D, 5), (L, 5), (P, 3)})), (B, frozenset({(R, 1), (A, 2), (S, 2), (M, 7), (D, 7), (P, 8), (J, 9), (Q, 5), (F, 8), (L, 3), (O, 4), (I, 1), (G, 4), (T, 6), (K, 2), (H, 5), (E, 3), (N, 6), (C, 6)})), (I, frozenset({(T, 5), (C, 9), (R, 7), (H, 1), (F, 6), (E, 5), (N, 2), (P, 8), (B, 1), (A, 7), (K, 3), (L, 9), (O, 4), (J, 2), (Q, 1), (S, 6), (M, 5), (D, 2), (G, 3)})), (D, frozenset({(C, 2), (T, 1), (O, 2), (B, 7), (I, 2), (R, 6), (S, 7), (A, 4), (K, 3), (F, 5), (Q, 8), (M, 6), (G, 1), (P, 4), (H, 8), (E, 6), (L, 5), (J, 7), (N, 9)})), (H, frozenset({(O, 9), (B, 5), (A, 2), (S, 2), (F, 3), (E, 2), (P, 5), (T, 1), (G, 5), (R, 3), (M, 6), (C, 4), (I, 1), (N, 7), (Q, 4), (K, 8), (L, 2), (D, 8), (J, 7)}))}); module.dijkstra_cache(graph, A); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 13.259993247985841 for 0.22672917 sec of execution.
